Bug 12790 (xkbprint) - xkbprint produce wrong internal outline with cornerRadius
Summary: xkbprint produce wrong internal outline with cornerRadius
Status: RESOLVED FIXED
Alias: xkbprint
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: unspecified
Hardware: All All
: low minor
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2007-10-12 06:10 UTC by Pavel Kurashov
Modified: 2008-11-27 22:13 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xkbprint psgeom.c Diff (586 bytes, patch)
2007-10-12 06:12 UTC, Pavel Kurashov
no flags Details | Splinter Review
xkbprint One key keyboard image without patch (3.62 KB, application/pdf)
2007-10-12 06:16 UTC, Pavel Kurashov
no flags Details
xkbprint One key keyboard with patch, no more tail (3.61 KB, application/pdf)
2007-10-12 06:19 UTC, Pavel Kurashov
no flags Details
reformulation of psgeom.c Diff (867 bytes, patch)
2008-11-14 05:06 UTC, Peter Breitenlohner
no flags Details | Splinter Review

Description Pavel Kurashov 2007-10-12 06:10:36 UTC
When generating image of a keyboard geometry with xkbprint, it does not care about cornerRadius for outlines defined by two pair coordinates. As a result, on the keyboard produced image you can notice small tail in the left-upper corner of internal outline of a key (which usualy defined by two pair coordinates). This tail because of cornerRadius not taken into account for the starting drawing point.
Difference in old and fixed with patch xkbprint pictures can be seen in pdfs attached.
Comment 1 Pavel Kurashov 2007-10-12 06:12:58 UTC
Created attachment 12008 [details] [review]
xkbprint psgeom.c Diff
Comment 2 Pavel Kurashov 2007-10-12 06:16:23 UTC
Created attachment 12009 [details]
xkbprint One key keyboard image without patch

This is how key looks with small tail, produced by xkbprint with patch
Comment 3 Pavel Kurashov 2007-10-12 06:19:04 UTC
Created attachment 12010 [details]
xkbprint One key keyboard with patch, no more tail

When the cornerRadius is used, outline is looking fine
Comment 4 Peter Breitenlohner 2008-11-14 05:06:04 UTC
Created attachment 20303 [details] [review]
reformulation of psgeom.c Diff

This is a real bug, patch should be applied (I just reformulated it against current git) in addition to those for bug #15207
Comment 5 Peter Breitenlohner 2008-11-14 05:14:35 UTC
(In reply to comment #4)
> Created an attachment (id=20303) [details]
> reformulation of psgeom.c Diff
> 
> This is a real bug, patch should be applied (I just reformulated it against
> current git) in addition to those for bug #15207
> 

Sorry, that should have been: in addition to those for bug #15078
Comment 6 Paulo César Pereira de Andrade 2008-11-27 22:13:29 UTC
Thanks.

Applied as 885f2712b0d5137d5349c3debbcea0db0f39e92f


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.