correct outline with cornerRadius

http://bugs.freedesktop.org/show_bug.cgi?id=12790
https://bugs.freedesktop.org/attachment.cgi?id=12008

Signed-off-by: Peter Breitenlohner <peb@mppmu.mpg.de>